Modified: Freq dict as a Data Frame

--- a/Assignment-Practice01-LR-Sentiment-Classification.ipynb
+++ b/Assignment-Practice01-LR-Sentiment-Classification.ipynb
@@ -5,8 +5,8 @@
    "id": "8ce87aff",
    "metadata": {},
    "source": [
-    "# Assignment 1: Logistic Regression\n",
-    "Welcome to week one of this specialization. You will learn about logistic regression. Concretely, you will be implementing logistic regression for sentiment analysis on tweets. Given a tweet, you will decide if it has a positive sentiment or a negative one. Specifically you will: \n",
+    "# Logistic Regression\n",
+    "You will learn about logistic regression. Concretely, you will be implementing logistic regression for sentiment analysis on tweets. Given a tweet, you will decide if it has a positive sentiment or a negative one. Specifically you will: \n",
     "\n",
     "* Learn how to extract features for logistic regression given some text\n",
     "* Implement logistic regression from scratch\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "d65c72ca",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "59df1738",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "9           (odd, 1.0)     2"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "57667146",
    "metadata": {},
    "outputs": [
@@ -411,192 +411,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              0    1\n",
-      "0  followfriday  1.0\n",
-      "1           top  1.0\n",
-      "2         engag  1.0\n",
-      "3        member  1.0\n",
-      "4        commun  1.0\n",
-      "5          week  1.0\n",
-      "6            :)  1.0\n",
-      "7           hey  1.0\n",
-      "8          jame  1.0\n",
-      "9           odd  1.0\n"
+      "              0    1     2\n",
+      "0  followfriday  1.0    23\n",
+      "1           top  1.0    30\n",
+      "2         engag  1.0     7\n",
+      "3        member  1.0    14\n",
+      "4        commun  1.0    27\n",
+      "5          week  1.0    72\n",
+      "6            :)  1.0  2847\n",
+      "7           hey  1.0    60\n",
+      "8          jame  1.0     7\n",
+      "9           odd  1.0     2\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>followfriday</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>top</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>engag</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>member</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>commun</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>week</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>:)</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>hey</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>jame</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>odd</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>23</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>14</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>27</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>72</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2847</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>60</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>7</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              0    1\n",
-       "0  followfriday  1.0\n",
-       "1           top  1.0\n",
-       "2         engag  1.0\n",
-       "3        member  1.0\n",
-       "4        commun  1.0\n",
-       "5          week  1.0\n",
-       "6            :)  1.0\n",
-       "7           hey  1.0\n",
-       "8          jame  1.0\n",
-       "9           odd  1.0\n",
-       "0            23  NaN\n",
-       "1            30  NaN\n",
-       "2             7  NaN\n",
-       "3            14  NaN\n",
-       "4            27  NaN\n",
-       "5            72  NaN\n",
-       "6          2847  NaN\n",
-       "7            60  NaN\n",
-       "8             7  NaN\n",
-       "9             2  NaN"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "col1=pd.DataFrame(list(freqs.keys())[:10])\n",
-    "print(col1)\n",
-    "col1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f667e50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df="
+    "#print(col1)\n",
+    "col1['2'] = pd.Series(list(freqs.values())[:10])\n",
+    "print(col1)"
    ]
   },
   {
