Modified: Logistic Regression theory included.

--- a/Assignment-Practice01-LR-Sentiment-Classification.ipynb
+++ b/Assignment-Practice01-LR-Sentiment-Classification.ipynb
@@ -20,6 +20,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c289a8e7",
+   "metadata": {},
+   "source": [
+    "### Logistic regression: regression and a sigmoid\n",
+    "\n",
+    "Logistic regression takes a regular linear regression, and applies a sigmoid to the output of the linear regression.\n",
+    "\n",
+    "Regression:\n",
+    "$$z = \\theta_0 x_0 + \\theta_1 x_1 + \\theta_2 x_2 + ... \\theta_N x_N$$\n",
+    "Note that the $\\theta$ values are \"weights\". If you took the Deep Learning Specialization, we referred to the weights with the `w` vector.  In this course, we're using a different variable $\\theta$ to refer to the weights.\n",
+    "\n",
+    "Logistic regression\n",
+    "$$ h(z) = \\frac{1}{1+\\exp^{-z}}$$\n",
+    "$$z = \\theta_0 x_0 + \\theta_1 x_1 + \\theta_2 x_2 + ... \\theta_N x_N$$\n",
+    "We will refer to 'z' as the 'logits'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79fa389f",
+   "metadata": {},
+   "source": [
+    "### Cost function and Gradient\n",
+    "\n",
+    "The cost function used for logistic regression is the average of the log loss across all training examples:\n",
+    "\n",
+    "$$J(\\theta) = -\\frac{1}{m} \\sum_{i=1}^m y^{(i)}\\log (h(z(\\theta)^{(i)})) + (1-y^{(i)})\\log (1-h(z(\\theta)^{(i)}))\\tag{5} $$\n",
+    "* $m$ is the number of training examples\n",
+    "* $y^{(i)}$ is the actual label of the i-th training example.\n",
+    "* $h(z(\\theta)^{(i)})$ is the model's prediction for the i-th training example.\n",
+    "\n",
+    "The loss function for a single training example is\n",
+    "$$ Loss = -1 \\times \\left( y^{(i)}\\log (h(z(\\theta)^{(i)})) + (1-y^{(i)})\\log (1-h(z(\\theta)^{(i)})) \\right)$$\n",
+    "\n",
+    "* All the $h$ values are between 0 and 1, so the logs will be negative. That is the reason for the factor of -1 applied to the sum of the two loss terms.\n",
+    "* Note that when the model predicts 1 ($h(z(\\theta)) = 1$) and the label $y$ is also 1, the loss for that training example is 0. \n",
+    "* Similarly, when the model predicts 0 ($h(z(\\theta)) = 0$) and the actual label is also 0, the loss for that training example is 0. \n",
+    "* However, when the model prediction is close to 1 ($h(z(\\theta)) = 0.9999$) and the label is 0, the second term of the log loss becomes a large negative number, which is then multiplied by the overall factor of -1 to convert it to a positive loss value. $-1 \\times (1 - 0) \\times log(1 - 0.9999) \\approx 9.2$ The closer the model prediction gets to 1, the larger the loss."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e01eb16",
+   "metadata": {},
+   "source": [
+    "#### Update the weights\n",
+    "\n",
+    "To update your weight vector $\\theta$, you will apply gradient descent to iteratively improve your model's predictions.  \n",
+    "The gradient of the cost function $J$ with respect to one of the weights $\\theta_j$ is:\n",
+    "\n",
+    "$$\\nabla_{\\theta_j}J(\\theta) = \\frac{1}{m} \\sum_{i=1}^m(h^{(i)}-y^{(i)})x_j \\tag{5}$$\n",
+    "* 'i' is the index across all 'm' training examples.\n",
+    "* 'j' is the index of the weight $\\theta_j$, so $x_j$ is the feature associated with weight $\\theta_j$\n",
+    "\n",
+    "* To update the weight $\\theta_j$, we adjust it by subtracting a fraction of the gradient determined by $\\alpha$:\n",
+    "$$\\theta_j = \\theta_j - \\alpha \\times \\nabla_{\\theta_j}J(\\theta) $$\n",
+    "* The learning rate $\\alpha$ is a value that we choose to control how big a single update will be.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d4f80e6",
    "metadata": {},
    "source": [
@@ -478,12 +539,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "3c293ed8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# UNQ_C2 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "def gradientDescent(x, y, theta, alpha, num_iters):\n",
     "    m = x.shape[0]\n",
     "    \n",
@@ -534,7 +594,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# UNQ_C3 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "def extract_features(tweet, freqs):\n",
     "    word_l = process_tweet(tweet)    \n",
     "    x = np.zeros((1, 3))     \n",
