Modified to include notes

--- a/Assignment-Practice01-LR-Sentiment-Classification.ipynb
+++ b/Assignment-Practice01-LR-Sentiment-Classification.ipynb
@@ -15,12 +15,12 @@
     "* Perform error analysis\n",
     "\n",
     "We will be using a data set of tweets. Hopefully you will get more than 99% accuracy.  \n",
-    "Run the cell below to load in the packages."
+    "Run the cell below to load in the packages...."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c289a8e7",
+   "id": "faf9e995",
    "metadata": {},
    "source": [
     "### Logistic regression: regression and a sigmoid\n",
@@ -34,17 +34,17 @@
     "Logistic regression\n",
     "$$ h(z) = \\frac{1}{1+\\exp^{-z}}$$\n",
     "$$z = \\theta_0 x_0 + \\theta_1 x_1 + \\theta_2 x_2 + ... \\theta_N x_N$$\n",
-    "We will refer to 'z' as the 'logits'."
+    "We will refer to 'z' as the 'logits'..."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "79fa389f",
+   "id": "9b19c78c",
    "metadata": {},
    "source": [
     "### Cost function and Gradient\n",
     "\n",
-    "The cost function used for logistic regression is the average of the log loss across all training examples:\n",
+    "The cost function used for logistic regression is the average of the log loss across all training examples:-\n",
     "\n",
     "$$J(\\theta) = -\\frac{1}{m} \\sum_{i=1}^m y^{(i)}\\log (h(z(\\theta)^{(i)})) + (1-y^{(i)})\\log (1-h(z(\\theta)^{(i)}))\\tag{5} $$\n",
     "* $m$ is the number of training examples\n",
@@ -62,13 +62,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e01eb16",
+   "id": "cc78e49e",
    "metadata": {},
    "source": [
     "#### Update the weights\n",
     "\n",
     "To update your weight vector $\\theta$, you will apply gradient descent to iteratively improve your model's predictions.  \n",
-    "The gradient of the cost function $J$ with respect to one of the weights $\\theta_j$ is:\n",
+    "The gradient of the cost function $J$ with respect to one of the weights $\\theta_j$ is:-\n",
     "\n",
     "$$\\nabla_{\\theta_j}J(\\theta) = \\frac{1}{m} \\sum_{i=1}^m(h^{(i)}-y^{(i)})x_j \\tag{5}$$\n",
     "* 'i' is the index across all 'm' training examples.\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "450e2db6",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "8b9f2c82",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "cfd3200b",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "2e030320",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "b12678b7",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "5000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "61a0d896",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "5000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "99bd8903",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "0eb6777a",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "(8000, 2000)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "291720d9",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "(4000, 1)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "ceed3d10",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "616e3cb3",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "b8ce2f75",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "d65c72ca",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "59df1738",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "9           (odd, 1.0)     2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "57667146",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "241ffac1",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "098d8dbe",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "3c293ed8",
    "metadata": {},
    "outputs": [],
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "c6b4957c",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "150fece7",
    "metadata": {},
    "outputs": [],
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "482de6f8",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "6b23efc4",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
        "'#FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "049bc611",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "6e6f068f",
    "metadata": {},
    "outputs": [],
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "8bbdb285",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "0fc7d2ac",
    "metadata": {},
    "outputs": [],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "42fd459d",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "id": "f03b40ac",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "array([[0.81636912]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "3d58328f",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "id": "03fa28c8",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "id": "61a5e941",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "id": "ba7b3a76",
    "metadata": {},
    "outputs": [
@@ -914,14 +914,6 @@
     "else: \n",
     "    print('Negative sentiment')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2eb045c4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
